<resources>
    <string name="app_name">DSGV1</string>
    <string name="lang_passwd">Password</string>
    <string name="lang_Vault_name">Vault name</string>
    <string name="Open_The_Vault">Open The Vault</string>
    <string name="Backup_Restore">Backup &amp; Restore</string>
    <string name="Create_a_new_Vault">Create a New Vault</string>
    <string name="Return">Return</string>
    <string name="Expert_Mode">Expert Mode</string>
    <string name="Version">Version</string>
    <string name="Select_your_language">Select your language:</string>
    <string name="Vault_Name_or_Password_cant_be_empty">Vault Name or Password can\'t be empty!</string>
    <string name="Wrong_credentials">Wrong credentials!</string>
    <string name="New_contact_has_been_saved">New contact has been saved!</string>
    <string name="Contact_name_cant_be_empty">Contact name can\'t be empty!</string>
    <string name="Cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="Please_open_your_vault">Please open your vault.</string>
    <string name="Decrypting_in_progress">Decrypting in progress...</string>
    <string name="You_have_a_Voice_message">You have a Voice message!</string>
    <string name="Do_you_want_me_to_play_it">Do you want me to play it?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Contact_Import">Import a New Contact</string>
    <string name="Name">Name</string>
    <string name="Save">Save</string>
    <string name="Expert_mode_has_been_enabled">Expert mode has been enabled.</string>
    <string name="Expert_mode_has_been_disabled">Expert mode has been disabled.</string>
    <string name="Export">Export</string>
    <string name="Restore">Restore</string>
    <string name="Delete">Delete</string>
    <string name="WARNING">WARNING</string>
    <string name="You_are_about_to_restore_a_backup">You are about to restore a backup...</string>
    <string name="Wipe_all_date">Current data will be permanently deleted. Do you really want to proceed?</string>
    <string name="Delete_backup">You are about to delete a backup file...</string>
    <string name="Are_You_Sure">Do you really want to proceed?</string>
    <string name="Data_Encryption">Data Encryption in progress...</string>
    <string name="Backup_has_been_created">Backup has been created!</string>
    <string name="MSG_Backup_Done">Please keep in mind that the just created backup has been saved locally on this device, to export the backup click on it and choose for \'Export the backup\' to save it preferably on a USB stick. As backups contain only encrypted data, you can save your backups everywhere you want, but we don\'t recommend online cloud services, Just because used RSA encryption is still unbreakable as today it doesn\'t mean it will be still unbreakable in the future.</string>
    <string name="Ok">Ok</string>
    <string name="No_backup_yet">You haven\'t create any backup yet.</string>
    <string name="Create_a_Backup">Create a Backup</string>
    <string name="MSG_new_vault">* You can create as many vaults as you want. \n\n * Each vault will have a different public vault address. This helps you to separate works and private info or anonymous usage etc... \n\n * Each vault will be created and get saved on this device. No information whatsoever will ever be saved on any server or cloud services etc... \n\n * As every information on this device get encrypted and stored locally, you need to make a backup regularly when you create a new vault or add new information to your vault, password manager etc... \n\n * As backups contain only encrypted data, you can save your backups everywhere you want, but we don\'t recommend online cloud services to be used as a storage of any sensitive data... Just because RSA encryption is still unbreakable as today it doesn\'t mean it will be still unbreakable by tomorrow. \n\n * You can use the same vault name for different vaults as long as the passwords are different! Or use the same password as long as the vault names are different. The combination of your vault name and password grant access to the vault. \n\n * If you create a new vault using existing vault name and password combination DigiSafeGuard will just act like a new vault has been created. This is not a bug but a security measure! There will be no warning that a vault exists. \n\n * Vault names will also get encrypted. Even when a hacker gets physical access to this device he can\'t see any data as laterally every piece of information that you can think of will get encrypted before saving, like vault names, contact names, passwords etc... \n\n * Used encryption is based on RSA encryption in conjunction with AES for particular operations and doesn\'t rely on key storage of the Android operation system. This makes encryptions and decryptions slower and functions much more limited and less user-friendly, however, grant a much higher security level what makes this vault different than any other known app out there. RSA 4096 bit encryption is known as the most secure and unbreakable encryption method today. DigiSafeGuard has been designed with maximum security in mind and unfortunately, this can sometimes lead to less user-friendliness or slower operation. However, you can count on the most secure vault ever created. \n\n * DigiSafeGuard can be used in 2 different ways. Online and offline mode. \n\n Online mode:\n When you install and operate this app (DigiSafeGuard) on your regular smartphone having internet access, you still are exposed to the hackers as everyone having remote access to your phone screen can see the information that is visually available to you. Even though DigiSafeGuard has been designed to use cryptography most securely, it can\'t guarantee that a hacker doesn\'t watch your screen when you are typing your secrets information. \n\n Offline mode:\n You can also install this app on any other android device that doesn\'t have an internet connection, for example, an old smartphone that you don\'t use anymore. This makes DigiSafeGuard as secure as it ever can be as you can be 100% sure that no intruder will ever get remote access to your vault information. When using DigisafeGuard in offline mode you can use the QRcode data transfer method to send and receive messages and other data.</string>
    <string name="Creating_new_encryption_keys">Creating new encryption keys...</string>
    <string name="New_Vault_Creation">New Vault Creation</string>
    <string name="Your_new_vault_has_been_created">Your new vault has been created!</string>
    <string name="Vault_Public_Address">Vault Public Address</string>
    <string name="Close_The_Vault">Close The Vault</string>
    <string name="Crypto_Wallet">Crypto Wallet</string>
    <string name="Archive_Manager">Archive Manager</string>
    <string name="Passwords_Manager">Passwords Manager</string>
    <string name="Read_a_Message">Read a Message</string>
    <string name="Send_a_Message">Send a Message</string>
    <string name="Contact_Manager">Contact Manager</string>
    <string name="Not_a_valid_message">Invalid data!</string>
    <string name="SCU_DSG_under_construction">Both DigiSafeGuard and Securypto Blockchain is still under heavy development. This feature is unfortunately not ready yet.</string>
    <string name="Manual_Input">Manual Input</string>
    <string name="Read_from_Clipboard">Read from Clipboard</string>
    <string name="Read_by_QR_Code">Read by QR Code</string>
    <string name="Info">Info</string>
    <string name="lang_not_ready">This language has not been ready yet. If you want to help translating, please contact us on our telegram channel or send an email to dev@securypto.io</string>
    <string name="Show_Record">Show Record</string>
    <string name="Credentials">Credentials</string>
    <string name="Description">Description</string>
    <string name="Username">Username</string>
    <string name="data_wipe_confim">Data will be erased. Are you Sure?</string>
    <string name="Add_New_Credentials">Add New Credentials</string>
    <string name="data_saved">Data has been saved!</string>
    <string name="no_passwd_manager_data">Your Password Manager is empty.\n\nIn your Password Manager you can save all your credentials securly in encrypted mode.</string>
    <string name="Restarting_QR_Dance">Restarting QR Dance...</string>
    <string name="Anonymous_Transfer">Anonymous Transfer</string>
    <string name="MSG_SCU_send">You can in the future send your messages using Securypto Blockchain Anonymously. However Securypto Blockchain is still under heavy development and not ready yet. For the time being you can use other communication channels like WhatsApp, Gmail, Telegram etc... (use top left button) You\'r messages will still be encrypted and secure but not as anonymous as when using Securypto Blockchain.</string>
    <string name="Your_archive_is_empty">Your archive is empty.\n\nUsing this secure vault you can save different type of encrypted data\'s like text-notes, pictures and audio-notes. To add data to your archive, first select your desired archive (top left button) and then click on the + sign (top right button) to add your data.</string>
    <string name="Search">Search...</string>
    <string name="Select_an_Archive">Select an Archive</string>
    <string name="Text_and_Notes">Text and Notes</string>
    <string name="Audio_Files">Audio Files</string>
    <string name="Pictures">Pictures</string>
    <string name="Save_as">Save as...</string>
    <string name="Name_cant_be_empty">Name can\'t be empty!</string>
    <string name="Coudnt_take_a_picture">Coudn\'t take a picture!</string>
    <string name="Recording">Recording audio-note...</string>
    <string name="Stop_Recording">Stop Recording</string>
    <string name="MSG_contact">Your vault contact list is empty. To send a message, first you need to import the public vault address of the receiver. \n\n Steps:\n 1. Ask your contact for his public vault address.\n 2. Once received, Click on his QR Code and share it with DigiSafeGuard, DSG will automatically recognize his public vault address and imported for you. \n\n\n*If you are using DigiSafeGuard in offline mode on a separate device, you need to scan his public vault address QR code manually using the scan function. You need to do this only once for every new contact. \n\n * As contact name you can choose whatever you want. All contact names will also be encrypted too and are not visible even if a hacker gets physical access to your device.</string>
    <string name="Picture">Picture</string>
    <string name="Show_contact_address">Show contact address</string>
    <string name="File">File</string>
    <string name="Voice_Message">Voice Message</string>
    <string name="Text_Message">Text Message</string>
    <string name="Encrypte_the_message">Encrypte the message</string>
    <string name="Decrypte_the_message">Decrypte the message</string>
    <string name="Encrypte_and_Save_in_Archive">Encrypte and Save in Archive</string>
    <string name="Subject_Must_be_unique">Subject... (Must be unique)</string>
    <string name="Subject_cant_be_empty">Subject can\'t be empty!</string>
    <string name="Description...">Description...</string>
    <string name="Password...">Password...</string>
    <string name="Username...">Username...</string>
    <string name="Vault_Name...">Vault Name...</string>
    <string name="Vault_Password...">Vault Password...</string>
    <string name="Create_a_scu_wallet">Create a new wallet</string>
    <string name="Your_wallet_is_empty">You haven\'t create any wallet yet. To create a wallet choose your desired coin (top left button) and then click on the + sign (top right button) to add as many wallet\'s as desired. Each wallet will have their own xpriv, xpub &amp; unlimited receiving address.</string>
    <string name="backpage">Back</string>
    <string name="back_to_app">Home</string>
</resources>