<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="io.securypto.dsgv1.contacts_manager" >


    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:foregroundGravity="center"

        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"

 />


    <TextView
        android:id="@+id/textViewnocontact"


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="50dp"

        android:background="@layout/xml_roundedtextedit"


        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="8dp"

        android:scrollbars="vertical"
        android:text="@string/MSG_contact"


 />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        >

    </ListView>

    <Button
        android:id="@+id/button_import_contact"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"

        android:background="@layout/xml_buttonpointtobottom"
        android:onClick="godirectlytoscannerpage"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/Contact_Import"
        android:textColor="#FFFFFF"

        android:textSize="15dp"

        />


    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/textViewnocontact"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"
        android:background="@layout/xml_buttonpointtotop"
        android:onClick="gotovaultpage"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/Return"


        android:textColor="#FFFFFF"
        android:textSize="15dp" />




</RelativeLayout>