<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="io.securypto.dsgv1.passwdmanager" >


    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:foregroundGravity="center"

        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"

        />


    <TextView
        android:id="@+id/textViewnopasswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:gravity="left"
        android:text="@string/no_passwd_manager_data"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:background="@layout/xml_round"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"


        />



    <ListView
        android:id="@+id/listView_passwd_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        >

    </ListView>

    <Button
        android:id="@+id/button_import_passwd"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"

        android:background="@layout/xml_buttonpointtobottom"
        android:onClick="addnewpasswd"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/Add_New_Credentials"
        android:textColor="#FFFFFF"

        android:textSize="15dp"

        />


    <Button
        android:id="@+id/button_return_passwd"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/textViewnopasswd"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"
        android:background="@layout/xml_buttonpointtotop"
        android:onClick="gotologinsuccespage"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/Return"


        android:textColor="#FFFFFF"
        android:textSize="15dp" />


</RelativeLayout>